# serializer version: 1
# name: test_management_command_default_run
  list([
    'Command launched with wet_run=False',
    'Start archiving employee records',
    'Found 1 archivable employee record(s)',
    'Archiving employee_record.pk=42',
    '[EMPLOYEE RECORD] performed transition EmployeeRecordWorkflow.archive (NEW -> ARCHIVED)',
    '1/1 employee record(s) were archived',
    'Setting transaction to be rollback as wet_run=False',
  ])
# ---
# name: test_management_command_wet_run
  list([
    'Start archiving employee records',
    'Found 1 archivable employee record(s)',
    'Archiving employee_record.pk=42',
    '[EMPLOYEE RECORD] performed transition EmployeeRecordWorkflow.archive (NEW -> ARCHIVED)',
    '1/1 employee record(s) were archived',
  ])
# ---
